Add control guis to scenes, Add scene select to main program

--- a/YaDemo/YaDemo.csproj
+++ b/YaDemo/YaDemo.csproj
@@ -11,4 +11,11 @@
     <ItemGroup>
       <ProjectReference Include="..\YaEngine\YaEngine\YaEngine.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+    <None Include="$(SolutionDir)YaDemo\Assets\**" CopyToOutputDirectory="PreserveNewest" LinkBase="Assets\" />
+    <None Update="Assets\Models\Skeleton\Animations\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    </ItemGroup>
 </Project>
